--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "private": true,
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.1",
-        "react-router-dom": "^6.22.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -12,12 +11,14 @@
         "axios": "^1.2.1",
         "formik": "^2.2.9",
         "react": "^18.2.0",
+        "react-datepicker": "^6.6.0",
         "react-dom": "^18.2.0",
         "react-dropzone": "^14.2.3",
         "react-icons": "^4.7.1",
         "react-multi-select-component": "^4.3.4",
         "react-quill": "^2.0.0",
         "react-redux": "^8.0.5",
+        "react-router-dom": "^6.22.1",
         "react-scripts": "5.0.1",
         "react-select": "^5.7.0",
         "react-toastify": "^9.1.1",
